# supermarkdown

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/supermarkdown/: Cargo.toml
crates/supermarkdown-cli/: Cargo.toml
crates/supermarkdown-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/supermarkdown-napi/src/: lib.rs
crates/supermarkdown-wasm/: Cargo.toml  test.html
crates/supermarkdown-wasm/src/: lib.rs
crates/supermarkdown/benches/: conversion.rs
crates/supermarkdown/src/: converter.rs  entities.rs  escape.rs  lib.rs  options.rs  postprocess.rs  precompute.rs  whitespace.rs
crates/supermarkdown/src/rules/: blockquote.rs  br.rs  code.rs  deflist.rs  details.rs  emphasis.rs  figure.rs  heading.rs  hr.rs  image.rs  link.rs  list.rs  mod.rs  paragraph.rs  passthrough.rs  pre.rs  strikethrough.rs  subscript.rs  superscript.rs  table.rs
crates/supermarkdown/tests/: fixtures_test.rs
crates/supermarkdown/tests/fixtures/: blog_post.html  code_heavy.html  documentation.html  malformed.html  tables.html
