[workspace]
resolver = "2"
members = ["crates/supermarkdown", "crates/supermarkdown-cli", "crates/supermarkdown-napi", "crates/supermarkdown-wasm"]

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/vakra-dev/supermarkdown"
authors = ["The supermarkdown Authors"]

[workspace.dependencies]
# HTML parsing
scraper = "0.18"
html5ever = "0.27"
ego-tree = "0.6"

# Performance
rustc-hash = "1.1"
regex = "1.10"
once_cell = "1.19"
smallvec = "1.11"
memchr = "2.7"

# Optional logging
log = "0.4"

# Testing
criterion = "0.5"
pretty_assertions = "1.4"

# Node.js bindings
napi = { version = "2", features = ["async"] }
napi-derive = "2"
napi-build = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }

# WASM bindings
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
