[package]
name = "supermarkdown-cli"
description = "CLI for supermarkdown HTML to Markdown conversion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"

[[bin]]
name = "supermarkdown"
path = "src/main.rs"

[dependencies]
supermarkdown = { version = "0.0.4", path = "../supermarkdown", default-features = false }
