[package]
name = "supermarkdown-napi"
description = "Node.js bindings for supermarkdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
supermarkdown = { path = "../supermarkdown" }
napi.workspace = true
napi-derive.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build.workspace = true
